--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -23,22 +23,22 @@ general {
 input-field {
     monitor = 
     size = 250, 60
-    outline_thickness = 0
+    outline_thickness = 2
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-    outer_color = rgba(8ccff0ff)
-    inner_color = rgba(1b2023cc)
-    font_color = rgb(dfe3e7)
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(0, 0, 0, 0.3)
+    font_color = rgb(255, 255, 255)
     fade_on_empty = true
     fade_timeout = 1000
     rounding = -1
-    placeholder_text = <span foreground="#dfe3e7">Password</span>
+    placeholder_text = <span foreground="#ffffff">Password</span>
     hide_input = false
     position = 0, -200
     halign = center
     valign = center
-    check_color = rgb(8ccff0)
+    check_color = rgb(8a9297)
     fail_color = rgb(ffb4ab)
     fail_text =  <b>$ATTEMPTS</b> # can be set to empty
     fail_timeout = 2000 # milliseconds before fail_text and fail_color disappears
