--- a/config/matugen/config.toml
+++ b/config/matugen/config.toml
@@ -52,7 +52,7 @@ output_path = '../hypr/hyprlock.conf'
 [templates.waybar]
 input_path = './templates/waybar.css'
 output_path = '~/.config/waybar/style.css'
-post_hook = 'pkill -SIGUSR2 waybar'
+post_hook = './.config/waybar/scripts/launch-waybar.sh'
 
 [templates.swaync]
 input_path = './templates/swaync.css'
@@ -70,7 +70,16 @@ output_path = '~/Projects/Notes/.obsidian/snippets/matugen.css'
 [templates.zen]
 input_path = './templates/zen.css'
 output_path = '~/.zen/icbf5wlx.Default (release)/chrome/matugen.css'
+post_hook = 'notify-send "Matugen" "Zen browser theme updated. Please restart Zen to see changes." -u normal'
 
 [templates.nvim]
 input_path = './templates/nvim.lua'
 output_path = '~/.config/nvim/colors/matugen.lua'
+
+[templates.discord]
+input_path = './templates/discord.css'
+output_path = '~/.config/Vencord/themes/matugen.theme.css'
+
+[templates.discord-flatpak]
+input_path = './templates/discord.css'
+output_path = '~/.var/app/com.discordapp.Discord/config/Vencord/themes/matugen.theme.css'
