--- a/config/matugen/templates/hyprlock.conf
+++ b/config/matugen/templates/hyprlock.conf
@@ -28,12 +28,12 @@ input-field {
     dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
     outer_color = rgba(0, 0, 0, 0)
-    inner_color = rgba({{colors.surface.default.hex_stripped}}, 0.2)
-    font_color = rgb({{colors.on_surface.default.hex_stripped}})
+    inner_color = rgba(0, 0, 0, 0.3)
+    font_color = rgb(255, 255, 255)
     fade_on_empty = true
     fade_timeout = 1000
     rounding = -1
-    placeholder_text = <span foreground="#{{colors.on_surface.default.hex_stripped}}">Password</span>
+    placeholder_text = <span foreground="#ffffff">Password</span>
     hide_input = false
     position = 0, -200
     halign = center
