--- a/config/cava/config
+++ b/config/cava/config
@@ -3,16 +3,16 @@ framerate = 144
 
 [color]
 background = 'default'
-foreground = '#8ccff0'
+foreground = '#81d3de'
 
 gradient = 0
-gradient_color_1 = '#004d65'
-gradient_color_2 = '#8ccff0'
-gradient_color_3 = '#bee9ff'
+gradient_color_1 = '#004f56'
+gradient_color_2 = '#81d3de'
+gradient_color_3 = '#9df0fb'
 
 horizontal_gradient = 0
-horizontal_gradient_color_1 = '#004d65'
-horizontal_gradient_color_2 = '#8ccff0'
-horizontal_gradient_color_3 = '#bee9ff'
-horizontal_gradient_color_4 = '#8ccff0'
-horizontal_gradient_color_5 = '#004d65'
+horizontal_gradient_color_1 = '#004f56'
+horizontal_gradient_color_2 = '#81d3de'
+horizontal_gradient_color_3 = '#9df0fb'
+horizontal_gradient_color_4 = '#81d3de'
+horizontal_gradient_color_5 = '#004f56'
