--- a/config/waypaper/config.ini
+++ b/config/waypaper/config.ini
@@ -13,7 +13,7 @@ all_subfolders = False
 show_hidden = False
 show_gifs_only = False
 zen_mode = False
-post_command = pkill waypaper && hyprpanel sw $wallpaper
+post_command = pkill waypaper && matugen image $wallpaper && ~/.config/hypr/scripts/update_hyprpaper.sh $wallpaper
 number_of_columns = 3
 swww_transition_type = center
 swww_transition_step = 10
