Update Hyprland configuration with new scripts and improved settings

--- a/config/hypr/config/appearance.conf
+++ b/config/hypr/config/appearance.conf
@@ -4,14 +4,17 @@
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
-layerrule = blur, bar-0
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+layerrule = ignorealpha 0.7, waybar
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
 layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
-
+layerrule = blur, rofi
+layerrule = ignorezero, rofi
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
