--- a/config/hypr/config/keybinds.conf
+++ b/config/hypr/config/keybinds.conf
@@ -22,7 +22,7 @@ bind = $mainMod SHIFT, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 bind = $mainMod SHIFT, E, exec, ~/.config/rofi/emoji/emoji.sh
 bind = $mainMod, Escape, exec, hyprlock
 bind = $mainMod, Tab, exec, ~/.config/rofi/window/window.sh
-
+bind = $mainMod, Z, exec, flatpak run app.zen_browser.zen 
 # Move focus with mainMod + vim keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
@@ -68,15 +68,15 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness (with SwayOSD)
-bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
-bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
-bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
-bindel = ,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
-bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
-bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
+bindel = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/swayosd.sh --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/swayosd.sh --output-volume lower
+bindel = ,XF86AudioMute, exec, ~/.config/hypr/scripts/swayosd.sh --output-volume mute-toggle
+bindel = ,XF86AudioMicMute, exec, ~/.config/hypr/scripts/swayosd.sh --input-volume mute-toggle
+bindel = ,XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/swayosd.sh --brightness raise
+bindel = ,XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/swayosd.sh --brightness lower
 
 # Caps Lock OSD
-bindl = ,Caps_Lock, exec, swayosd-client --caps-lock
+bindl = ,Caps_Lock, exec, ~/.config/hypr/scripts/swayosd.sh --caps-lock
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
