Update kanshi config to auto-focus HDMI on lid close

--- a/config/kanshi/config
+++ b/config/kanshi/config
@@ -10,6 +10,7 @@ profile lid-closed {
     }
 
     exec ~/.config/waybar/scripts/launch-waybar.sh
+    exec ~/.config/hypr/scripts/focus-hdmi.sh
 }
 
 profile dual-monitor {
