--- a/config/kitty/current-theme.conf
+++ b/config/kitty/current-theme.conf
@@ -2,40 +2,40 @@ cursor #dee4e4
 cursor_text_color #bec8ca
 
 foreground            #dee4e4
-background            #0e1415
+background            #090d0d
 selection_foreground  #1c3437
 selection_background  #b1cbcf
 url_color             #81d3de
 
 # black
-color8   #262626
-color0   #4c4c4c
+color0   #171d1d
+color8   #343a3b
 
 # red
-color1   #ac8a8c
-color9   #c49ea0
+color1 #ffb595
+color9 #ffc7af
 
 # green
-color2   #8aac8b
-color10  #9ec49f
+color2 #95d5a7
+color10 #a7dcb6
 
 # yellow
-color3   #aca98a
-color11  #c4c19e
+color3 #b8cf84
+color11 #c3d696
 
 # blue
-/* color4  #8f8aac */
+# color4  #afc6ff
 color4  #81d3de
-color12 #a39ec4
+color12 #c8d8ff
 
 # magenta
-color5   #ac8aac
-color13  #c49ec4
+color5 #e4b7f3
+color13 #eccdf7
 
 # cyan
-color6   #8aacab
-color14  #9ec3c4
+color6 #80d4d9
+color14 #94dbdf
 
 # white
-color15   #e7e7e7
-color7  #f0f0f0
+color7 #899294
+color15 #dee4e4
