--- a/config/matugen/templates/hypr.conf
+++ b/config/matugen/templates/hypr.conf
@@ -1,4 +1,36 @@
-<* for name, value in colors *>
-$image = {{image}}
-${{name}} = rgba({{value.default.hex_stripped}}ff)
-<* endfor *>
+$wallpaper = {{image}}
+$background = rgba({{colors.background.default.hex_stripped}}ff)
+$foreground = rgba({{colors.on_background.default.hex_stripped}}ff)
+$color0 = rgba({{colors.surface_bright.default.hex_stripped}}ff)
+$color1 = rgba({{colors.primary.default.hex_stripped | set_lightness: -12.5}}ff)
+$color2 = rgba({{colors.primary.default.hex_stripped | set_lightness: -10.0}}ff)
+$color3 = rgba({{colors.primary.default.hex_stripped | set_lightness: -7.5}}ff)
+$color4 = rgba({{colors.primary.default.hex_stripped | set_lightness: -5.0}}ff)
+$color5 = rgba({{colors.primary.default.hex_stripped | set_lightness: -2.5}}ff)
+$color6 = rgba({{colors.primary.default.hex_stripped | set_lightness: 0.0}}ff)
+$color7 = rgba({{colors.on_surface_variant.default.hex_stripped}}ff)
+$color8 = rgba({{colors.surface_variant.default.hex_stripped}}ff)
+$color9 = rgba({{colors.primary_fixed.default.hex_stripped | set_lightness: -12.5}}ff)
+$color10 = rgba({{colors.primary_fixed.default.hex_stripped | set_lightness: -10.0}}ff)
+$color11 = rgba({{colors.primary_fixed.default.hex_stripped | set_lightness: -7.5}}ff)
+$color12 = rgba({{colors.primary_fixed.default.hex_stripped | set_lightness: -5.0}}ff)
+$color13 = rgba({{colors.primary_fixed.default.hex_stripped | set_lightness: -2.5}}ff)
+$color14 = rgba({{colors.primary_fixed.default.hex_stripped | set_lightness: 0.0}}ff)
+$color15 = rgba({{colors.on_surface.default.hex_stripped}}ff)
+
+$primary = rgba({{colors.primary.default.hex_stripped}}ff)
+$secondary = rgba({{colors.secondary.default.hex_stripped}}ff)
+$tertiary = rgba({{colors.tertiary.default.hex_stripped}}ff)
+$surface = rgba({{colors.surface.default.hex_stripped}}ff)
+$surface_bright = rgba({{colors.surface_bright.default.hex_stripped}}ff)
+$error = rgba({{colors.error.default.hex_stripped | set_lightness: -20.0}}ff)
+
+# Additional essential color variables
+$outline = rgba({{colors.outline.default.hex_stripped}}ff)
+$outline_variant = rgba({{colors.outline_variant.default.hex_stripped}}ff)
+$on_surface = rgba({{colors.on_surface.default.hex_stripped}}ff)
+$on_surface_variant = rgba({{colors.on_surface_variant.default.hex_stripped}}ff)
+$on_background = rgba({{colors.on_background.default.hex_stripped}}ff)
+$surface_container = rgba({{colors.surface_container.default.hex_stripped}}ff)
+$surface_container_high = rgba({{colors.surface_container_high.default.hex_stripped}}ff)
+$surface_container_highest = rgba({{colors.surface_container_highest.default.hex_stripped}}ff)
