Update Hyprland keybinds with new rofi launchers and native volume controls

--- a/config/hypr/config/keybinds.conf
+++ b/config/hypr/config/keybinds.conf
@@ -11,12 +11,13 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, R, exec, ~/.config/rofi/search/search.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, swapsplit, # dwindle
 bind = $mainMod, F, fullscreen, 1 
 bind = $mainMod SHIFT, F, fullscreen, 0
-bind = $mainMod SHIFT, S, exec, flatpak run be.alexandervanhee.gradia --screenshot=INTERACTIVE
+bind = $mainMod SHIFT, S, exec, ~/.config/rofi/screenshot/screenshot.sh
+bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/quick-screenshot.sh
 bind = $mainMod SHIFT, W, exec, waypaper
 bind = $mainMod SHIFT, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 bind = $mainMod SHIFT, E, exec, ~/.config/rofi/emoji/emoji.sh
@@ -67,16 +68,13 @@ bind = $mainMod, mouse_up, workspace, e+1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness (with SwayOSD)
-bindel = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/swayosd.sh --output-volume raise
-bindel = ,XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/swayosd.sh --output-volume lower
-bindel = ,XF86AudioMute, exec, ~/.config/hypr/scripts/swayosd.sh --output-volume mute-toggle
-bindel = ,XF86AudioMicMute, exec, ~/.config/hypr/scripts/swayosd.sh --input-volume mute-toggle
-bindel = ,XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/swayosd.sh --brightness raise
-bindel = ,XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/swayosd.sh --brightness lower
-
-# Caps Lock OSD
-bindl = ,Caps_Lock, exec, ~/.config/hypr/scripts/swayosd.sh --caps-lock
+# Laptop multimedia keys for volume and LCD brightness
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl set 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
