Update Hyprland configuration with improved colors and window rules

--- a/config/hypr/colors.conf
+++ b/config/hypr/colors.conf
@@ -1,36 +1,276 @@
-$wallpaper = /home/abdelrahman/wallpapers/1-everforest.jpg
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
 $background = rgba(0e1415ff)
-$foreground = rgba(dee4e4ff)
-$color0 = rgba(343a3bff)
-$color1 = rgba(4ec1d1ff)
-$color2 = rgba(59c5d3ff)
-$color3 = rgba(63c8d6ff)
-$color4 = rgba(6dccd9ff)
-$color5 = rgba(77cfdbff)
-$color6 = rgba(81d3deff)
-$color7 = rgba(bec8caff)
-$color8 = rgba(3f484aff)
-$color9 = rgba(60e7f9ff)
-$color10 = rgba(6ce8f9ff)
-$color11 = rgba(78eafaff)
-$color12 = rgba(85ecfaff)
-$color13 = rgba(91eefbff)
-$color14 = rgba(9df0fbff)
-$color15 = rgba(dee4e4ff)
 
-$primary = rgba(81d3deff)
-$secondary = rgba(b1cbcfff)
-$tertiary = rgba(b9c6eaff)
-$surface = rgba(0e1415ff)
-$surface_bright = rgba(343a3bff)
-$error = rgba(ff5945ff)
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$blue = rgba(afc6ffff)
 
-# Additional essential color variables
-$outline = rgba(899294ff)
-$outline_variant = rgba(3f484aff)
-$on_surface = rgba(dee4e4ff)
-$on_surface_variant = rgba(bec8caff)
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$blue_container = rgba(2d4578ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$blue_source = rgba(0000ffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$blue_value = rgba(0000ffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$cyan = rgba(80d4d9ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$cyan_container = rgba(004f53ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$cyan_source = rgba(00ffffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$cyan_value = rgba(00ffffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$error = rgba(ffb4abff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$error_container = rgba(93000aff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$green = rgba(95d5a7ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$green_container = rgba(10512fff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$green_source = rgba(00ff00ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$green_value = rgba(00ff00ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$inverse_on_surface = rgba(2b3132ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$inverse_primary = rgba(006972ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$inverse_surface = rgba(dee4e4ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$magenta = rgba(e4b7f3ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$magenta_container = rgba(5c386bff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$magenta_source = rgba(ff00ffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$magenta_value = rgba(ff00ffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
 $on_background = rgba(dee4e4ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_blue = rgba(142f60ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_blue_container = rgba(d9e2ffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_cyan = rgba(003739ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_cyan_container = rgba(9cf0f5ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_error = rgba(690005ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_error_container = rgba(ffdad6ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_green = rgba(00391dff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_green_container = rgba(b0f1c2ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_magenta = rgba(442253ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_magenta_container = rgba(f7d8ffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_primary = rgba(00363cff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_primary_container = rgba(9df0fbff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_primary_fixed = rgba(001f23ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_primary_fixed_variant = rgba(004f56ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_red = rgba(542105ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_red_container = rgba(ffdbcdff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_secondary = rgba(1c3437ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_secondary_container = rgba(cde7ebff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_secondary_fixed = rgba(051f22ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_secondary_fixed_variant = rgba(324b4eff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_surface = rgba(dee4e4ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_surface_variant = rgba(bec8caff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_tertiary = rgba(23304dff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_tertiary_container = rgba(d9e2ffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_tertiary_fixed = rgba(0c1b36ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_tertiary_fixed_variant = rgba(394664ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_white = rgba(00363dff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_white_container = rgba(9eeffdff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_yellow = rgba(263500ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$on_yellow_container = rgba(d4ec9dff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$outline = rgba(899294ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$outline_variant = rgba(3f484aff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$primary = rgba(81d3deff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$primary_container = rgba(004f56ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$primary_fixed = rgba(9df0fbff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$primary_fixed_dim = rgba(81d3deff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$red = rgba(ffb595ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$red_container = rgba(713619ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$red_source = rgba(ff0000ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$red_value = rgba(ff0000ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$scrim = rgba(000000ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$secondary = rgba(b1cbcfff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$secondary_container = rgba(324b4eff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$secondary_fixed = rgba(cde7ebff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$secondary_fixed_dim = rgba(b1cbcfff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$shadow = rgba(000000ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$source_color = rgba(425052ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$surface = rgba(0e1415ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$surface_bright = rgba(343a3bff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
 $surface_container = rgba(1b2122ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
 $surface_container_high = rgba(252b2cff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
 $surface_container_highest = rgba(303637ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$surface_container_low = rgba(171d1dff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$surface_container_lowest = rgba(090f10ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$surface_dim = rgba(0e1415ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$surface_tint = rgba(81d3deff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$surface_variant = rgba(3f484aff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$tertiary = rgba(b9c6eaff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$tertiary_container = rgba(394664ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$tertiary_fixed = rgba(d9e2ffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$tertiary_fixed_dim = rgba(b9c6eaff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$white = rgba(82d3e0ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$white_container = rgba(004f58ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$white_source = rgba(ffffffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$white_value = rgba(ffffffff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$yellow = rgba(b8cf84ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$yellow_container = rgba(3b4d0fff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$yellow_source = rgba(ffff00ff)
+
+$image = /home/abdelrahman/wallpapers/1-everforest.jpg
+$yellow_value = rgba(ffff00ff)
