--- a/config/hypr/config/windowrules.conf
+++ b/config/hypr/config/windowrules.conf
@@ -29,6 +29,15 @@ windowrulev2 = size 500 350,class:(blueman-manager)
 windowrulev2 = center,class:(blueman-manager)
 windowrulev2 = opacity 0.95,class:(blueman-manager)
 
+windowrulev2 = float,class:(nm-connection-editor)
+windowrulev2 = size 500 350,class:(nm-connection-editor)
+windowrulev2 = center,class:(nm-connection-editor)
+windowrulev2 = opacity 0.95,class:(nm-connection-editor)
+
 windowrulev2 = float,class:(floating-updates)
 windowrulev2 = size 900 600,class:(floating-updates)
 windowrulev2 = center,class:(floating-updates)
+
+# Rofi search - transparent with blur
+layerrule = blur,rofi
+layerrule = ignorezero,rofi
