--- a/config/kitty/current-theme.conf
+++ b/config/kitty/current-theme.conf
@@ -2,40 +2,40 @@ cursor #dee4e4
 cursor_text_color #bec8ca
 
 foreground            #dee4e4
-background            #090d0d
+background            #0e1415
 selection_foreground  #1c3437
 selection_background  #b1cbcf
 url_color             #81d3de
 
 # black
-color0   #171d1d
-color8   #343a3b
+color8   #262626
+color0   #4c4c4c
 
 # red
-color1 #ffb595
-color9 #ffc7af
+color1   #ac8a8c
+color9   #c49ea0
 
 # green
-color2 #95d5a7
-color10 #a7dcb6
+color2   #8aac8b
+color10  #9ec49f
 
 # yellow
-color3 #b8cf84
-color11 #c3d696
+color3   #aca98a
+color11  #c4c19e
 
 # blue
-# color4  #afc6ff
+/* color4  #8f8aac */
 color4  #81d3de
-color12 #c8d8ff
+color12 #a39ec4
 
 # magenta
-color5 #e4b7f3
-color13 #eccdf7
+color5   #ac8aac
+color13  #c49ec4
 
 # cyan
-color6 #80d4d9
-color14 #94dbdf
+color6   #8aacab
+color14  #9ec3c4
 
 # white
-color7 #899294
-color15 #dee4e4
+color15   #e7e7e7
+color7  #f0f0f0
