--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -12,12 +12,12 @@
     "custom/update",
     "custom/sysinfo",
     "hyprland/language",
+    "custom/notification",
     "pulseaudio",
     "custom/mic-indicator",
     "bluetooth",
     "network",
-    "battery",
-    "custom/notification"
+    "battery"
   ],
 
   "hyprland/workspaces": {
@@ -123,19 +123,19 @@
     "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-disconnected": "Disconnected",
     "interval": 3,
-    "on-click": "networkmanager_dmenu"
+    "on-click": "nm-connection-editor"
   },
 
   "battery": {
-    "format": "{icon}",
-    "format-discharging": "{icon}",
-    "format-charging": "{icon}",
+    "format": "{icon} {capacity}%",
+    "format-discharging": "{icon} {capacity}%",
+    "format-charging": "{icon} {capacity}%",
     "format-plugged": "",
     "format-icons": {
       "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
       "default": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
     },
-    "format-full": "󰂅",
+    "format-full": "󰂅 {capacity}%",
     "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
     "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
     "interval": 5,
