--- a/config/hypr/config/workspaces.conf
+++ b/config/hypr/config/workspaces.conf
@@ -8,10 +8,10 @@
 # When HDMI-A-1 is connected: workspace 1 on HDMI-A-1, workspace 2 on eDP-1
 # When HDMI-A-1 is disconnected: workspace 1 on eDP-1
 workspace = 1, monitor:HDMI-A-1, default:true
-workspace = 2, monitor:HDMI-A-1, 
-workspace = 3, monitor:HDMI-A-1, 
-workspace = 4, monitor:HDMI-A-1, 
-workspace = 5, monitor:eDP-1
+workspace = 2, monitor:HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
+workspace = 4, monitor:HDMI-A-1
+workspace = 5, monitor:eDP-1, default:true
 
 
 # "Smart gaps" / "No gaps when only"
