Change waypaper background color from white to black

--- a/config/waypaper/config.ini
+++ b/config/waypaper/config.ini
@@ -7,7 +7,7 @@ show_path_in_tooltip = True
 backend = swww
 fill = fill
 sort = name
-color = #ffffff
+color = #000000
 subfolders = True
 all_subfolders = False
 show_hidden = False
