Replace swaync with mako in hyprland and waybar configurations

--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -11,7 +11,7 @@ exec-once = dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP
 exec-once = systemctl --user restart kanshi.service
 exec-once = hyprpaper
-exec-once = swaync
+exec-once = mako
 exec-once = blueman-applet
 # exec-once = nm-applet
 exec-once = hypridle
