--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -184,20 +184,12 @@
     "signal": 8
   },
   "custom/notification": {
-    "tooltip": true,
-    "format": "{icon}",
-    "format-icons": {
-      "notification": "󱅫",
-      "none": "󰂜",
-      "dnd-notification": "󰂠",
-      "dnd-none": "󰪓"
-    },
-    "return-type": "json",
-    "exec-if": "which swaync-client",
-    "exec": "swaync-client -swb",
-    "on-click": "sleep 0.1 && swaync-client -t -sw",
-    "on-click-right": "sleep 0.1 && swaync-client -d -sw",
-    "escape": true
+    "tooltip": false,
+    "format": "󱅫",
+    "exec-if": "which makoctl",
+    "on-click": "makoctl dismiss",
+    "on-click-right": "makoctl dismiss --all",
+    "on-click-middle": "makoctl invoke"
   },
 
   "custom/netusage": {
