Update screenshot keybind to use hyprshot directly

--- a/config/hypr/config/keybinds.conf
+++ b/config/hypr/config/keybinds.conf
@@ -17,7 +17,7 @@ bind = $mainMod, S, swapsplit, # dwindle
 bind = $mainMod, F, fullscreen, 1 
 bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod SHIFT, S, exec, ~/.config/rofi/screenshot/screenshot.sh
-bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/quick-screenshot.sh
+bind = $mainMod CTRL, S, exec, hyprshot -m region
 bind = $mainMod SHIFT, W, exec, waypaper
 bind = $mainMod SHIFT, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 bind = $mainMod SHIFT, E, exec, ~/.config/rofi/emoji/emoji.sh
