--- a/config/matugen/config.toml
+++ b/config/matugen/config.toml
@@ -3,8 +3,16 @@
 [config.wallpaper]
 command = "swww"
 # Apply to every detected output; swww otherwise targets only the focused one.
-arguments = ["img", "--outputs", "all", "--transition-type", "wave", "--transition-step", "10", "--transition-angle", "45", "--transition-duration", "2", "--transition-fps", "144"]
+arguments = ["img", "--outputs", "all", "--transition-type", "wave", "--transition-step", "20", "--transition-angle", "45", "--transition-duration", "1", "--transition-fps", "144"]
 set = true
+
+[templates.gtk3]
+input_path = './templates/gtk.css'
+output_path = '~/.config/gtk-3.0/colors.css'
+
+[templates.gtk4]
+input_path = './templates/gtk.css'
+output_path = '~/.config/gtk-4.0/colors.css'
 
 [templates.rofi]
 input_path = "./templates/rofi.rasi"
@@ -21,16 +29,10 @@ output_path = "~/.config/rofi/search/colors-matugen.rasi"
 [templates.kitty]
 input_path = './templates/kitty.conf'
 output_path = '../kitty/themes/matugen.conf'
-post_hook = "kitty +kitten themes --reload-in=all Matugen"
 
-[templates.gtk3]
-input_path = './templates/gtk.css'
-output_path = '~/.config/gtk-3.0/colors.css'
-post_hook = 'gsettings set org.gnome.desktop.interface gtk-theme ""; gsettings set org.gnome.desktop.interface gtk-theme adw-gtk3-dark'
-
-[templates.gtk4]
-input_path = './templates/gtk.css'
-output_path = '~/.config/gtk-4.0/colors.css'
+[templates.tty-clock]
+input_path = "./templates/tty-clock-wrapper.sh"
+output_path = "~/.local/bin/tty-clock-themed"
 
 [templates.qt5]
 input_path = './templates/qt.conf'
@@ -43,7 +45,6 @@ output_path = '~/.config/qt6ct/colors/matugen.conf'
 [templates.cava]
 input_path = './templates/cava-colors.ini'
 output_path = '~/.config/cava/config'
-# post_hook = "pkill -USR1 cava"  # uncomment if cava is running
 
 [templates.btop]
 input_path = './templates/btop.theme'
@@ -52,7 +53,6 @@ output_path = '~/.config/btop/themes/matugen.theme'
 [templates.hyprland]
 input_path = './templates/hypr.conf'
 output_path = '../hypr/colors.conf'
-post_hook = 'hyprctl reload'
 
 [templates.hyprlock]
 input_path = './templates/hyprlock.conf'
@@ -61,26 +61,23 @@ output_path = '../hypr/hyprlock.conf'
 [templates.waybar]
 input_path = './templates/waybar.css'
 output_path = '~/.config/waybar/style.css'
-post_hook = './.config/waybar/scripts/launch-waybar.sh'
 
-[templates.swaync]
-input_path = './templates/swaync.css'
-output_path = '~/.config/swaync/style.css'
-post_hook = 'swaync-client -rs'
+[templates.mako]
+input_path = './templates/mako.conf'
+output_path = '~/.config/mako/config'
 
 [templates.obsidian]
 input_path = './templates/obsidian.css'
 output_path = '~/Projects/Notes/.obsidian/snippets/matugen.css'
 
 [templates.nvim]
-input_path = "./templates/nvim.lua"
-output_path = "~/.cache/wal/base46-dark.lua"
-post_hook = "mkdir -p ~/.local/share/nvim/lazy/base46/lua/base46/themes && ln -sf ~/.cache/wal/base46-dark.lua ~/.local/share/nvim/lazy/base46/lua/base46/themes/chadwal.lua && ~/.config/matugen/scripts/compile-nvim-theme.sh"
+input_path = "./templates/nvim-lazyvim.lua"
+output_path = "~/.config/nvim/colors/matugen.lua"
 
-[templates.nvimlight]
-input_path = "./templates/nvim.lua"
-output_path = "~/.cache/wal/base46-light.lua"
-post_hook = "mkdir -p ~/.local/share/nvim/lazy/base46/lua/base46/themes && ln -sf ~/.cache/wal/base46-light.lua ~/.local/share/nvim/lazy/base46/lua/base46/themes/chadwal-light.lua"
+# Light theme disabled - uncomment if needed
+# [templates.nvimlight]
+# input_path = "./templates/nvim-lazyvim.lua"
+# output_path = "~/.config/nvim/colors/matugen-light.lua"
 
 [templates.discord]
 input_path = './templates/midnight-discord.css'
@@ -93,6 +90,10 @@ output_path = '~/.var/app/com.discordapp.Discord/config/Vencord/themes/midnight-
 [templates.yazi]
 input_path = "./templates/yazi.toml"
 output_path = "~/.config/yazi/theme.toml"
+
+[templates.fuzzel]
+input_path = "./templates/fuzzel.ini"
+output_path = "~/.config/fuzzel/fuzzel.ini"
 
 [templates.vesktop]
 input_path = './templates/vesktop-midnight-discord.css'
