Update hyprland appearance with improved blur settings and mako layer rules

--- a/config/hypr/config/appearance.conf
+++ b/config/hypr/config/appearance.conf
@@ -7,12 +7,9 @@
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = ignorealpha 0.7, waybar
-layerrule = blur, swaync-control-center
-layerrule = blur, swaync-notification-window
-layerrule = ignorezero, swaync-control-center
-layerrule = ignorezero, swaync-notification-window
-layerrule = ignorealpha 0.5, swaync-control-center
-layerrule = ignorealpha 0.5, swaync-notification-window
+layerrule = blur, notifications
+layerrule = ignorezero, notifications
+layerrule = ignorealpha 0.5, notifications
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
 
@@ -46,18 +43,18 @@ decoration {
 
     shadow {
         enabled = true
-        range = 8
-        render_power = 3
+        range = 5
+        render_power = 2
         color = rgba(1a1a1aee)
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 12
-        passes = 2
-
-        vibrancy = 0.1696
+        size = 10
+        passes = 3
+        vibrancy = 0.7
+        new_optimizations = true
     }
 }
 
