Update waypaper to use new wallpaper application script

--- a/config/waypaper/config.ini
+++ b/config/waypaper/config.ini
@@ -13,13 +13,13 @@ all_subfolders = False
 show_hidden = False
 show_gifs_only = False
 zen_mode = False
-post_command = pkill waypaper && matugen image $wallpaper && ~/.config/hypr/scripts/update_hyprpaper.sh $wallpaper
+post_command = pkill waypaper && ~/.config/matugen/scripts/apply-wallpaper.sh $wallpaper
 number_of_columns = 3
-swww_transition_type = center
+swww_transition_type = wipe
 swww_transition_step = 10
 swww_transition_angle = 45
 swww_transition_duration = 2
-swww_transition_fps = 144
+swww_transition_fps = 30
 mpvpaper_sound = False
 mpvpaper_options = 
 use_xdg_state = False
