Update matugen mako template with improved styling and volume/brightness notifications

--- a/config/matugen/templates/mako.conf
+++ b/config/matugen/templates/mako.conf
@@ -9,7 +9,8 @@ format=<b>%s</b>\n%b
 markup=1
 
 # Colors with transparency (like Rofi search)
-background-color=#{{colors.surface.default.hex_stripped}}F0
+# on_surface color automatically adjusts: black on bright backgrounds, white on dark backgrounds
+background-color=#{{colors.surface.default.hex_stripped}}CC
 text-color=#{{colors.on_surface.default.hex_stripped}}
 
 # Subtle border (same as notification background)
@@ -57,35 +58,53 @@ history=1
 
 # Low urgency - very brief
 [urgency=low]
-background-color=#{{colors.surface.default.hex_stripped}}E6
+background-color=#{{colors.surface.default.hex_stripped}}CC
+text-color=#{{colors.on_surface.default.hex_stripped}}
 default-timeout=1500
 
 # Normal urgency - 2 seconds (rofi-style)
 [urgency=normal]
-background-color=#{{colors.surface.default.hex_stripped}}F0
+background-color=#{{colors.surface.default.hex_stripped}}CC
+text-color=#{{colors.on_surface.default.hex_stripped}}
 default-timeout=2000
 
 # Critical urgency - stays until dismissed
 [urgency=critical]
-background-color=#{{colors.error_container.default.hex_stripped}}F0
+background-color=#{{colors.error_container.default.hex_stripped}}CC
 text-color=#{{colors.on_error_container.default.hex_stripped}}
-default-timeout=0
-ignore-timeout=1
+default-timeout=2000
+ignore-timeout=0
 
 # ============================
 # Application-Specific Styling
 # ============================
 
 # Music/Media - brief display
-[app-name="Spotify"]
+[app-name="spotify"]
 default-timeout=2000
 
 [app-name="playerctl"]
 default-timeout=2000
 
-# Volume/Brightness - very brief
+# Volume/Brightness - very brief, positioned lower on screen
+# Text color: static dark gray for contrast on all color schemes
 [app-name="volume"]
+background-color=#{{colors.surface.default.hex_stripped}}F0
+text-color=#3b3b3b
+font=JetBrainsMono Nerd Font 12
 default-timeout=1000
-
+width=400
+height=35
+padding=7, 15
+outer-margin=0,0,30,0
+anchor=bottom-center
 [app-name="brightness"]
+background-color=#{{colors.surface.default.hex_stripped}}F0
+text-color=#3b3b3b
+font=JetBrainsMono Nerd Font 12
 default-timeout=1000
+width=400
+height=35
+padding=7, 15
+outer-margin=0,0,30,0
+anchor=bottom-center
