--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -10,6 +10,7 @@
 exec-once = dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP
 exec-once = systemctl --user restart kanshi.service
+exec-once = ~/.config/hypr/scripts/check-lid-state.sh
 exec-once = hyprpaper
 exec-once = mako
 exec-once = blueman-applet
