--- a/config/hypr/config/keybinds.conf
+++ b/config/hypr/config/keybinds.conf
@@ -17,7 +17,7 @@ bind = $mainMod, S, swapsplit, # dwindle
 bind = $mainMod, F, fullscreen, 1 
 bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod SHIFT, S, exec, ~/.config/rofi/screenshot/screenshot.sh
-bind = $mainMod CTRL, S, exec, hyprshot -m region
+bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/screenshot-annotate.sh region
 bind = $mainMod SHIFT, W, exec, waypaper
 bind = $mainMod SHIFT, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 bind = $mainMod SHIFT, E, exec, ~/.config/rofi/emoji/emoji.sh
@@ -81,4 +81,9 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# Laptop lid switch
+bindl = , switch:on:Lid Switch, exec, kanshictl switch lid-closed
+bindl = , switch:off:Lid Switch, exec, kanshictl switch dual-monitor
+
 
