Add satty screenshot annotation integration

--- a/config/hypr/config/windowrules.conf
+++ b/config/hypr/config/windowrules.conf
@@ -34,6 +34,11 @@ windowrulev2 = size 500 350,class:(nm-connection-editor)
 windowrulev2 = center,class:(nm-connection-editor)
 windowrulev2 = opacity 0.95,class:(nm-connection-editor)
 
+windowrulev2 = float,class:(com.gabm.satty)
+windowrulev2 = size 1200 800,class:(com.gabm.satty)
+windowrulev2 = center,class:(com.gabm.satty)
+windowrulev2 = opacity 0.98,class:(com.gabm.satty)
+
 windowrulev2 = float,class:(floating-updates)
 windowrulev2 = size 900 600,class:(floating-updates)
 windowrulev2 = center,class:(floating-updates)
