Update environment and configuration files

--- a/config/hypr/config/env.conf
+++ b/config/hypr/config/env.conf
@@ -13,7 +13,7 @@ env = ICON_THEME,MacTahoe
 
 # Force all apps to use Wayland
 env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,kde
 env = SDL_VIDEODRIVER,wayland
 env = MOZ_ENABLE_WAYLAND,1
