--- a/config/matugen/templates/hyprlock.conf
+++ b/config/matugen/templates/hyprlock.conf
@@ -33,7 +33,7 @@ input-field {
     fade_on_empty = true
     fade_timeout = 1000
     rounding = -1
-    placeholder_text = <span foreground="#ffffff">Password</span>
+    placeholder_text =Password
     hide_input = false
     position = 0, -200
     halign = center
