--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -80,8 +80,8 @@
     "format": "",
     "return-type": "json",
     "exec": "~/.config/waybar/scripts/check-updates-fedora.sh",
-    "on-click": "yumex &",
-    "on-click-right": "yumex &",
+    "on-click": "gnome-software --mode=updates&",
+    "on-click-right": "gnome-software &",
     "tooltip": true,
     "signal": 8,
     "interval": 1800
