Add Fedora update center with shell UI

--- a/config/hypr/config/keybinds.conf
+++ b/config/hypr/config/keybinds.conf
@@ -21,6 +21,7 @@ bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/screenshot-annotate.sh reg
 bind = $mainMod SHIFT, W, exec, waypaper
 bind = $mainMod SHIFT, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 bind = $mainMod SHIFT, E, exec, ~/.config/rofi/emoji/emoji.sh
+bind = $mainMod SHIFT, U, exec, kitty --class floating-updates --title "Update Center" -e ~/.config/hypr/scripts/update-center.sh
 bind = $mainMod, Escape, exec, hyprlock
 bind = $mainMod, Tab, exec, ~/.config/rofi/window/window.sh
 bind = $mainMod, Z, exec, flatpak run app.zen_browser.zen 
