feat(hypr): add togglesplit keybind and improve lid switch handling
- Add SUPER+T keybind for toggle split orientation
- Update lid switch bindings to use apply-display-profile.sh script for more robust monitor management

--- a/config/hypr/config/keybinds.conf
+++ b/config/hypr/config/keybinds.conf
@@ -14,6 +14,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, ~/.config/rofi/search/search.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, swapsplit, # dwindle
+bind = $mainMod, T, togglesplit, # toggle split orientation (vertical/horizontal)
 bind = $mainMod, F, fullscreen, 1 
 bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod SHIFT, S, exec, ~/.config/rofi/screenshot/screenshot.sh
@@ -84,7 +85,5 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Laptop lid switch
-bindl = , switch:on:Lid Switch, exec, kanshictl switch lid-closed
-bindl = , switch:off:Lid Switch, exec, kanshictl switch dual-monitor
-
-
+bindl = , switch:on:Lid Switch, exec, ~/.config/hypr/scripts/apply-display-profile.sh --reason lid-on
+bindl = , switch:off:Lid Switch, exec, ~/.config/hypr/scripts/apply-display-profile.sh --reason lid-off
