feat(hypr): improve window rules with noborder and better waypaper support
- Add noborder rule for all windows for cleaner appearance
- Update waypaper window rule to use windowrulev2 with opacity
- Remove rofi blur/ignorezero layerrules for better performance

--- a/config/hypr/config/windowrules.conf
+++ b/config/hypr/config/windowrules.conf
@@ -7,10 +7,14 @@
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
-windowrule = float, class: waypaper
+windowrulev2 = float, class:(waypaper)
+windowrulev2 = opacity 0.85 0.85, class:(waypaper)
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+# Hide Hyprland borders for all windows
+windowrulev2 = noborder, class:.*
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
@@ -42,7 +46,3 @@ windowrulev2 = opacity 0.98,class:(com.gabm.satty)
 windowrulev2 = float,class:(floating-updates)
 windowrulev2 = size 900 600,class:(floating-updates)
 windowrulev2 = center,class:(floating-updates)
-
-# Rofi search - transparent with blur
-layerrule = blur,rofi
-layerrule = ignorezero,rofi
