style(hypr): update hyprlock color scheme to match current theme

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -38,7 +38,7 @@ input-field {
     position = 0, -200
     halign = center
     valign = center
-    check_color = rgb(899294)
+    check_color = rgb(919190)
     fail_color = rgb(ffb4ab)
     fail_text =  <b>$ATTEMPTS</b> # can be set to empty
     fail_timeout = 2000 # milliseconds before fail_text and fail_color disappears
@@ -49,7 +49,7 @@ input-field {
 label {
   monitor =
   text = cmd[update:1000] date +"%A, %B %d"
-  color = rgb(dee4e4)
+  color = rgb(e3e2e2)
   font_size = 22
   font_family = JetBrains Mono
   position = 0, 300
@@ -61,7 +61,7 @@ label {
 label {
   monitor =
   text = cmd[update:1000]  date +"%-I:%M"
-  color = rgb(dee4e4)
+  color = rgb(e3e2e2)
   font_size = 95
   font_family = JetBrains Mono Extrabold
   position = 0, 200
