--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/wallpapers/1-everforest.jpg
+preload = ~/wallpapers/trees.png
 
-wallpaper = ,~/wallpapers/1-everforest.jpg
+wallpaper = ,~/wallpapers/trees.png
