--- a/config/kitty/themes/matugen.conf
+++ b/config/kitty/themes/matugen.conf
@@ -1,11 +1,11 @@
-cursor #dee4e4
-cursor_text_color #bec8ca
+cursor #e3e2e2
+cursor_text_color #c7c6c6
 
-foreground            #dee4e4
-background            #0e1415
-selection_foreground  #1c3437
-selection_background  #b1cbcf
-url_color             #81d3de
+foreground            #e3e2e2
+background            #121414
+selection_foreground  #293233
+selection_background  #bec8ca
+url_color             #b8cacc
 
 # black
 color8   #262626
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #81d3de
+color4  #b8cacc
 color12 #a39ec4
 
 # magenta
